# gbaos

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README  README.md  crt0.s  display.c  display.h  gba-gcc.tc  gba_cart.ld  kstart.s  main.c  main.cpp  main.s  manifest.scm  string.c
.github/workflows/: ci.yml
cmake/: DiscoverHostTools.cmake
font8x8/: CMakeLists.txt
host/: CMakeLists.txt  CMakePresets.json
host/gba-tools/: CMakeLists.txt
host/genromfs/: CMakeLists.txt
kern/: CMakeLists.txt  display.c  display.h  gba_cart.ld  hwregs.c  hwregs.h  irq.c  irq.h  kstart.s  main.c  panic.c  panic.h  romfs.c  romfs.h  romfs.s.in  string.c  string.h  task.c  task.h  timer.h  types.h
kern/include/kern/: errno.h  syscall.h
kern/tinyprintf/: CMakeLists.txt  tinyprintf.c
libc/: CMakeLists.txt  abort.c  assert.c  crt0.s  errno.c  local.h  memset.c
libc/include/: assert.h  errno.h  stdlib.h  string.h
tools/: CMakeLists.txt
tools/gba-tools/: CMakeLists.txt
tools/genromfs/: CMakeLists.txt
tools/true/: CMakeLists.txt  true.c
